--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "browser-image-compression": "^2.0.2",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
