--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.13.2",
     "browser-image-compression": "^2.0.2",
+    "date-fns": "^4.1.0",
     "next": "15.5.6",
     "react": "19.1.0",
+    "react-day-picker": "^9.12.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
