--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "browser-image-compression": "^2.0.2",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.561.0",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-day-picker": "^9.12.0",
