--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.1.0",
     "react-day-picker": "^9.12.0",
     "react-dom": "19.1.0",
+    "uuid": "^13.0.0",
     "yet-another-react-lightbox": "^3.27.0"
   },
   "devDependencies": {
