--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "browser-image-compression": "^2.0.2",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.561.0",
-    "next": "15.5.6",
-    "react": "19.1.0",
+    "next": "^16.1.3",
+    "react": "^19.2.3",
     "react-day-picker": "^9.12.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.3",
     "react-select": "^5.10.2",
     "uuid": "^13.0.0",
     "yet-another-react-lightbox": "^3.27.0"
